--- a/Server/Base/Server.Base.csproj
+++ b/Server/Base/Server.Base.csproj
@@ -47,123 +47,49 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\DoubleMap.cs">
-      <Link>DoubleMap.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\ArrayHelper.cs">
-      <Link>Helper\ArrayHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\ByteHelper.cs">
-      <Link>Helper\ByteHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\EnumHelper.cs">
-      <Link>Helper\EnumHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\FileHelper.cs">
-      <Link>Helper\FileHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\IdGenerater.cs">
-      <Link>Helper\IdGenerater.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\MD5Helper.cs">
-      <Link>Helper\MD5Helper.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\MethodInfoHelper.cs">
-      <Link>Helper\MethodInfoHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\MongoHelper.cs">
-      <Link>Helper\MongoHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\NetHelper.cs">
-      <Link>Helper\NetHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\ProtobufHelper.cs">
-      <Link>Helper\ProtobufHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\RandomHelper.cs">
-      <Link>Helper\RandomHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\StringHelper.cs">
-      <Link>Helper\StringHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\TimeHelper.cs">
-      <Link>Helper\TimeHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Helper\ZipHelper.cs">
-      <Link>Helper\ZipHelper.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\LogType.cs">
-      <Link>LogType.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\MultiMap.cs">
-      <Link>MultiMap.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\AChannel.cs">
-      <Link>Network\AChannel.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\AService.cs">
-      <Link>Network\AService.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\TNet\PacketParser.cs">
-      <Link>Network\TNet\PacketParser.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\TNet\TBuffer.cs">
-      <Link>Network\TNet\TBuffer.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\TNet\TChannel.cs">
-      <Link>Network\TNet\TChannel.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\TNet\TPoller.cs">
-      <Link>Network\TNet\TPoller.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\TNet\TService.cs">
-      <Link>Network\TNet\TService.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\TNet\TSocket.cs">
-      <Link>Network\TNet\TSocket.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\UNet\Library.cs">
-      <Link>Network\UNet\Library.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\UNet\NativeMethods.cs">
-      <Link>Network\UNet\NativeMethods.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\UNet\NativeStructs.cs">
-      <Link>Network\UNet\NativeStructs.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\UNet\UAddress.cs">
-      <Link>Network\UNet\UAddress.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\UNet\UChannel.cs">
-      <Link>Network\UNet\UChannel.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\UNet\UPacket.cs">
-      <Link>Network\UNet\UPacket.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\UNet\UPoller.cs">
-      <Link>Network\UNet\UPoller.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\UNet\UService.cs">
-      <Link>Network\UNet\UService.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\UNet\USocket.cs">
-      <Link>Network\UNet\USocket.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\Network\UNet\USocketManager.cs">
-      <Link>Network\UNet\USocketManager.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\QueueDictionary.cs">
-      <Link>QueueDictionary.cs</Link>
-    </Compile>
-    <Compile Include="..\..\Unity\Assets\Plugins\Base\TryLocker.cs">
-      <Link>TryLocker.cs</Link>
-    </Compile>
+    <Compile Include="DoubleMap.cs" />
+    <Compile Include="Helper\ArrayHelper.cs" />
+    <Compile Include="Helper\ByteHelper.cs" />
+    <Compile Include="Helper\EnumHelper.cs" />
+    <Compile Include="Helper\FileHelper.cs" />
+    <Compile Include="Helper\IdGenerater.cs" />
+    <Compile Include="Helper\MD5Helper.cs" />
+    <Compile Include="Helper\MethodInfoHelper.cs" />
+    <Compile Include="Helper\MongoHelper.cs" />
+    <Compile Include="Helper\NetHelper.cs" />
+    <Compile Include="Helper\ProtobufHelper.cs" />
+    <Compile Include="Helper\RandomHelper.cs" />
+    <Compile Include="Helper\StringHelper.cs" />
+    <Compile Include="Helper\TimeHelper.cs" />
+    <Compile Include="Helper\ZipHelper.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Logger\ALogDecorater.cs" />
     <Compile Include="Logger\ILog.cs" />
     <Compile Include="Logger\NLogAdapter.cs" />
     <Compile Include="Logger\StackInfoDecorater.cs" />
+    <Compile Include="LogType.cs" />
+    <Compile Include="MultiMap.cs" />
+    <Compile Include="Network\AChannel.cs" />
+    <Compile Include="Network\AService.cs" />
+    <Compile Include="Network\TNet\PacketParser.cs" />
+    <Compile Include="Network\TNet\TBuffer.cs" />
+    <Compile Include="Network\TNet\TChannel.cs" />
+    <Compile Include="Network\TNet\TPoller.cs" />
+    <Compile Include="Network\TNet\TService.cs" />
+    <Compile Include="Network\TNet\TSocket.cs" />
+    <Compile Include="Network\UNet\Library.cs" />
+    <Compile Include="Network\UNet\NativeMethods.cs" />
+    <Compile Include="Network\UNet\NativeStructs.cs" />
+    <Compile Include="Network\UNet\UAddress.cs" />
+    <Compile Include="Network\UNet\UChannel.cs" />
+    <Compile Include="Network\UNet\UPacket.cs" />
+    <Compile Include="Network\UNet\UPoller.cs" />
+    <Compile Include="Network\UNet\UService.cs" />
+    <Compile Include="Network\UNet\USocket.cs" />
+    <Compile Include="Network\UNet\USocketManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueueDictionary.cs" />
+    <Compile Include="TryLocker.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
