--- a/Unity/Unity.csproj
+++ b/Unity/Unity.csproj
@@ -374,6 +374,9 @@
     <Compile Include="Assets\Scripts\Component\Config\RunServerConfig.cs" />
     <Compile Include="Assets\Scripts\Component\EventComponent.cs" />
     <Compile Include="Assets\Scripts\Component\MessageDispatherComponent.cs" />
+    <Compile Include="Assets\Scripts\Component\NetInnerComponent.cs" />
+    <Compile Include="Assets\Scripts\Component\NetOuterComponent.cs" />
+    <Compile Include="Assets\Scripts\Component\NetworkComponent.cs" />
     <Compile Include="Assets\Scripts\Component\TimerComponent.cs" />
     <Compile Include="Assets\Scripts\Config\ACategory.cs" />
     <Compile Include="Assets\Scripts\Config\AConfig.cs" />
@@ -383,17 +386,17 @@
     <Compile Include="Assets\Scripts\Config\ICategory.cs" />
     <Compile Include="Assets\Scripts\Define.cs" />
     <Compile Include="Assets\Scripts\DllHelper.cs" />
-    <Compile Include="Assets\Scripts\EntityEventType.cs" />
     <Compile Include="Assets\Scripts\Entity\AssetBundleLoaderAsync.cs" />
-    <Compile Include="Assets\Scripts\Component\NetInnerComponent.cs" />
-    <Compile Include="Assets\Scripts\Component\NetOuterComponent.cs" />
-    <Compile Include="Assets\Scripts\Component\NetworkComponent.cs" />
     <Compile Include="Assets\Scripts\Entity\Config\BuffConfig.cs" />
     <Compile Include="Assets\Scripts\Entity\Config\StartConfig.cs" />
     <Compile Include="Assets\Scripts\Entity\Game.cs" />
+    <Compile Include="Assets\Scripts\Entity\Message\InnerMessage.cs" />
+    <Compile Include="Assets\Scripts\Entity\Message\Opcode.cs" />
+    <Compile Include="Assets\Scripts\Entity\Message\OuterMessage.cs" />
     <Compile Include="Assets\Scripts\Entity\Scene.cs" />
     <Compile Include="Assets\Scripts\Entity\Session.cs" />
     <Compile Include="Assets\Scripts\Entity\WWWAsync.cs" />
+    <Compile Include="Assets\Scripts\EntityEventType.cs" />
     <Compile Include="Assets\Scripts\Event\AEventAttribute.cs" />
     <Compile Include="Assets\Scripts\Event\Env.cs" />
     <Compile Include="Assets\Scripts\Event\EnvKey.cs" />
@@ -423,12 +426,12 @@
     <Compile Include="Assets\Scripts\Message\OpcodeHelper.cs" />
     <Compile Include="Assets\Scripts\Message\RpcException.cs" />
     <Compile Include="Assets\Scripts\MonoMethod.cs" />
+    <Compile Include="Assets\Scripts\Object\Component.cs" />
     <Compile Include="Assets\Scripts\Object\Disposer.cs" />
+    <Compile Include="Assets\Scripts\Object\Entity.cs" />
     <Compile Include="Assets\Scripts\Object\EntityEventAttribute.cs" />
     <Compile Include="Assets\Scripts\Object\EntityEventId.cs" />
     <Compile Include="Assets\Scripts\Object\EntityType.cs" />
-    <Compile Include="Assets\Scripts\Object\Component.cs" />
-    <Compile Include="Assets\Scripts\Object\Entity.cs" />
     <Compile Include="Assets\Scripts\Object\IAwake.cs" />
     <Compile Include="Assets\Scripts\Object\ILoad.cs" />
     <Compile Include="Assets\Scripts\Object\IUpdate.cs" />
