1.默认Component不会序列化，只有继承ComponentDB的组件才会序列化 2.对象事件改回之前的方式

--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -94,13 +94,17 @@
     <Compile Include="Message\MessageInfo.cs" />
     <Compile Include="Message\OpcodeHelper.cs" />
     <Compile Include="Message\RpcException.cs" />
+    <Compile Include="Object\ComponentDB.cs" />
     <Compile Include="Object\Component.cs" />
     <Compile Include="Object\Disposer.cs" />
     <Compile Include="Object\Entity.cs" />
-    <Compile Include="Object\EntityEventAttribute.cs" />
-    <Compile Include="Object\EntityEventManager.cs" />
+    <Compile Include="Object\IAwake.cs" />
+    <Compile Include="Object\ILoad.cs" />
+    <Compile Include="Object\IUpdate.cs" />
+    <Compile Include="Object\ObjectEventAttribute.cs" />
     <Compile Include="Object\EntityType.cs" />
     <Compile Include="Object\Object.cs" />
+    <Compile Include="Object\ObjectEvents.cs" />
     <Compile Include="Other\EntityEventId.cs" />
     <Compile Include="Other\IInstanceMethod.cs" />
     <Compile Include="Other\MonoMethod.cs" />
