简化了对象事件的实现方式

--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Object\Entity.cs" />
     <Compile Include="Object\IAwake.cs" />
     <Compile Include="Object\ILoad.cs" />
+    <Compile Include="Object\ILateUpdate.cs" />
     <Compile Include="Object\IUpdate.cs" />
     <Compile Include="Object\ObjectEventAttribute.cs" />
     <Compile Include="Object\EntityType.cs" />
