1.location完善了lock unlock调用，location保存到mongodb中 2.actor消息一个个处理，处理完一个才处理下一个

--- a/Server/Model/Server.Model.csproj
+++ b/Server/Model/Server.Model.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Component\ActorProxyComponent.cs" />
     <Compile Include="Component\GamerComponent.cs" />
     <Compile Include="Entity\Gamer.cs" />
+    <Compile Include="Entity\Location.cs" />
     <Compile Include="Message\IEntityActorHandler.cs" />
     <Compile Include="Component\OpcodeTypeComponent.cs" />
     <Compile Include="Component\ActorManagerComponent.cs" />
